--- a/public/nav.html
+++ b/public/nav.html
@@ -1,6 +1,6 @@
 <nav>
     <div> 
-        <a href="home.html" class="here">Home</a>
+        <a href="index.html" class="here">Home</a>
         <a href="about.html" >About</a>      
         <a href="#" >Resolutions</a>          
         <a href="countries.html" >Countries</a>    
