--- a/public/countries.html
+++ b/public/countries.html
@@ -16,14 +16,10 @@
     </script>
 <!--end of Navigation bar-->
         <header>
-            <h1>Do it with react</h1>
+            <h1>Countries page</h1>
         </header>
-
         <main>
-        
-
-
-            <div class="tab">>
+            <div class="tab">
 
                 <!-- List of countries goes here -->
             </div>
