added resolutions page

--- a/public/about.html
+++ b/public/about.html
@@ -17,10 +17,10 @@
     </script>
 <!--end of Navigation bar-->
         <header>
-            <h1> This is the about page</h1>
+            <h1>About UNVotes</h1>
         </header>
         <about>
-            This is made by Khalil Samoud and Chase Duval
+            This is made by Khalil Samoud and Chase Duvall.
         </about>
         <main>
         
