--- a/public/nav.html
+++ b/public/nav.html
@@ -2,7 +2,7 @@
     <div> 
         <a href="index.html" class="here">Home</a>
         <a href="about.html" >About</a>      
-        <a href="#" >Resolutions</a>          
+        <a href="resolutions.html" >Resolutions</a>          
         <a href="countries.html" >Countries</a>    
         <a href="#" >Contact Us</a>
         <a href="#" >Statistics</a>
