category, pagesize, pagenum body attributes for /resolutions GET route

--- a/public/resolutions.html
+++ b/public/resolutions.html
@@ -26,11 +26,13 @@
             <div id="resolution" class="tabcontent">
                 <!-- detail content goes here -->
                 <div class="top-detail"> </div>
+                <div class="map-detail"></div>
                 <div class="bottom-detail"> </div>
             </div>
 
 
         </main>
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         <script src="resolutions.js" type="text/javascript"></script>
     </body>
 </html>
