sort resuolutions by date order, category, page number/size

--- a/public/resolutions.html
+++ b/public/resolutions.html
@@ -20,7 +20,7 @@
         </header>
         <main>
             <div class="tab">
-
+                Loading...
                 <!-- List of countries goes here -->
             </div>
             <div id="resolution" class="tabcontent">
